seat use in main

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.sittings_views.CustomerSeatView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/confirm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+
     <Button
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
@@ -22,19 +17,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-<!--    -->
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
 
-<!--        <LinearLayout-->
-<!--            android:id="@+id/layoutSeat"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
+    <LinearLayout
+        android:id="@+id/layoutSeat"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/confirm"
+        app:layout_constraintTop_toTopOf="@+id/scrollView2">
 
-<!--        </LinearLayout>-->
-<!--    </ScrollView>-->
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ScrollView>
 
 
 <!--    <com.example.sittings_views.CustomSeatView-->
